--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
     "gulp-svgsprite": "^1.0.2"
   },
   "dependencies": {
-    "add": "^2.0.6",
     "jquery": "^3.3.1",
-    "or": "^0.2.0",
-    "owl.carousel": "^2.3.4",
-    "yarn": "^1.6.0"
+    "owl.carousel": "^2.3.4"
   }
 }
