--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "bower": "^1.8.2",
     "browser-sync": "^2.23.6",
+    "fancybox": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-cheerio": "^0.6.3",
@@ -24,7 +25,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svgmin": "^1.2.4",
-    "gulp-svgsprite": "^1.0.2"
+    "gulp-svgsprite": "^1.0.2",
+    "mixitup": "^3.2.2"
   },
   "dependencies": {
     "jquery": "^3.3.1",
